# turbo-beep

./: CMakeLists.txt  README.md  SetPath.cmake  p2p.sh
certs/peer1/: mykeypair.pem  peer.pem
certs/peer2/: mykeypair.pem  peer.pem
include/: client.h  crypto.h  file_handler.h  messages.h  peer.h  socket_creator.h
protos/: payload.pb.cc  payload.pb.h  payload.proto
server/: CMakeLists.txt  main.cpp  server.cpp  server.h
src/: client.cpp  client.h  crypto.cpp  file_handler.cpp  main.cpp  messages.cpp  peer.cpp  socket_creator.cpp  socket_creator.h
src/socket/: ip_call.h  port.h  socket_utils.h
test/: CMakeLists.txt  main.cpp  messages_crypto_tests.cpp  p2p_authentication_test.cpp  p2p_message_tests.cpp  p2p_tests.cpp  server_tests.cpp  test_crypto_messages.cpp
test/include/: messages_crypto_tests.h  p2p_authentication_test.h  p2p_message_tests.h  p2p_tests.h  server_tests.h  tests.h
